# CXXScanner

./: CMakeLists.txt  README.md  autotest.sh  build.sh  package-lock.json  tudumper-conf.toml  vcpkg.json
cmake/: AddLibTooling.cmake  DocForCLITool.cmake  DocForLibrary.cmake
include/: consumer.h  foo.h
include/action/: FrontendAction.h
include/ast_consumer/: consumer.h
include/callback/AST/: CXXCallGraphCallback.h  CXXRecordCallback.h
include/callback/PP/: CXXInclusionCallback.h
include/context/: CXXAnalysisContext.h
include/convertor/: ClangDeclToCXXModel.h  convertor.hpp
include/dao/: CXXModelToPersistantObject.h  CXXTranslationUnitDAO.hpp  CXXTranslationUnitMongoDAO.h  MongoConnectionPool.h
include/graph/: Digraph.hpp
include/model/: CXXAccess.h  CXXBase.h  CXXCallGraph.h  CXXClass.h  CXXField.h  CXXFunction.h  CXXInclusion.h  CXXMethod.h  CXXName.h  CXXTranslationUnit.h  CXXType.h  CXXVariable.h  Element.h  SourceLoaction.h
include/reporter/: TUReporter.h  reporter.h
include/utility/: log.h  singleton.h  strutil.h
lib/: CMakeLists.txt  consumer.cpp  foo.cpp
lib/action/: CMakeLists.txt  FrontendAction.cpp  FrontendAction.h
lib/analysis/: CallGraph.h  ClassRelationMaker.cpp
lib/ast_consumer/: CMakeLists.txt  consumer.cpp  consumer.h
lib/callback/: CMakeLists.txt
lib/callback/AST/: CMakeLists.txt  CXXCallGraphCallback.cpp  CXXCallGraphCallback.h  CXXRecordCallback.cpp  CXXRecordCallback.h
lib/callback/CLOC/: CLOCPlugin.cpp  CLOCPlugin.h  CMakeLists.txt
lib/callback/CYCLO/: CMakeLists.txt  CYCLOPlugin.cpp  CYCLOPlugin.h
lib/callback/Git/: GitPlugin.cpp  GitPlugin.h
lib/callback/PP/: CMakeLists.txt  CXXInclusionCallback.cpp  CXXInclusionCallback.h
lib/config/: CMakeLists.txt  ConfigProvider.cpp  ConfigProvider.h
lib/context/: CMakeLists.txt  CXXAnalysisContext.cpp  CXXAnalysisContext.h  CXXCrossTUContext.cpp  CXXCrossTUContext.h
lib/convertor/: CMakeLists.txt  CXXModelToProtoModel.cpp  CXXModelToProtoModel.h  ClangDeclToCXXModel.cpp  ClangDeclToCXXModel.h
lib/dao/: CMakeLists.txt  CXXModelToPersistantObject.cpp  CXXTranslationUnitMangoDAO.cpp  CXXTranslationUnitPO.proto  MongoConnectionPool.cpp
lib/model/: CMakeLists.txt  CXXInclusion.cpp  Code.proto  File.proto  Project.proto  Tu.proto
lib/reporter/: CMakeLists.txt  TUReporter.cpp  reporter.cpp
lib/utility/: CMakeLists.txt  log.cpp  log.h  singleton.h  strutil.cpp  util.cpp  util.h
src/: foo.cpp
standalone/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_demo.cpp
tests/dao/: CMakeLists.txt  test_connPool.cpp
tests/graph/: CMakeLists.txt  test_DAG.cpp
tests/utility/: CMakeLists.txt  test_log.cpp
